<resources>
    <string name="app_name">ChatApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="photo" translatable="false">Photo</string>
    <string name="register" translatable="false">Register</string>
    <string name="have_account">Already have an account?</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="first_register">You don\'t have an account?</string>
    <string name="username">Username</string>
    <string name="sign_out">Sign out</string>
    <string name="new_message">New Message</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">Send</string>
    <string name="latest_message">Latest message</string>
    <string name="timestamp">Sun</string>
</resources>
