<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/pink"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/selectPhoto"
            android:clickable="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/select_photo"
            android:contentDescription="@string/photo"
            android:focusable="true" />

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/emailText"
        android:padding="10dp"
        android:textSize="20sp"
        android:background="@drawable/edit_text"
        android:paddingStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/passwordText"
            android:background="@drawable/edit_text"
            android:padding="10dp"
            android:textSize="20sp"
            android:paddingStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
            android:id="@+id/registerBtn"
            android:padding="10dp"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:background="@drawable/pink_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/alreadyHaveAnAccountBtn"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/have_account"
                android:textAlignment="center"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>