<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".ui.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_marginTop="300dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/emailTextLogin"
                android:padding="15dp"
                android:textSize="20sp"
                android:background="@drawable/edit_text"
                android:paddingStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/passwordTextLogin"
                android:background="@drawable/edit_text"
                android:padding="15dp"
                android:textSize="20sp"
                android:paddingStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/loginBtn"
                android:padding="15dp"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:background="@drawable/pink_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/goToRegisterBtn"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_register"
                android:textAlignment="center"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>

    </LinearLayout>
    </ScrollView>

</LinearLayout>